fixed config dialog spacing

--- a/client/styles/config-dialog.css
+++ b/client/styles/config-dialog.css
@@ -104,3 +104,7 @@
 
     font-size:0.8em;
 }
+
+.config-dialog-backdrop header, .config-application-setup, .config-application-start-script, .config-serving-file, .create-shortcut-div, .upload-favcion-div{
+    width:100%;
+}
